<resources>
    <string name="app_name">Cluedo</string>

    <string name="launch_activity_title">Welcome to Cluedo Assist</string>
    <string name="launch_activity_description">Always win Cluedo games while using this app</string>
    <string name="start">Start</string>

    <string name="card_setup_fragment_title">What suspects, weapons and locations does your game use?</string>
    <string name="or_choose_existing">Translate or change the names as you like</string>

    <string name="toggle_immersive_mode">Toggle immersive mode</string>
    <string name="name_of_card">Name of card</string>
    <string name="add_category">Add category</string>
    <string name="add_card">Add card</string>
    <string name="name_of_category">Name of category</string>
    <string name="next">Next</string>
    <string name="remove">Remove</string>
    <string name="name_of_player">Name of player</string>
    <string name="you">You</string>
    <string name="add_player">Add player</string>
    <string name="expand_or_collapse_xs">Expand or collapse</string>
    <string name="playerSetupFragmentTitle">Set up the players</string>
    <string name="ownedCardsFragmentTitle">Which cards do you have?</string>
    <string name="dialog_save_setup_message">How do you want to call this game setup?</string>
    <string name="card_setup_save_name_error">That name already exists. Existing game setup will be overriden.</string>
    <string name="load_existing">Load existing</string>
    <string name="clear">Clear</string>
    <string name="clear_all">Clear all</string>
    <string name="default_setup">Default</string>
    <string name="name_for_card_setup_hint">Enter a name to save this setup</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="player_setup_error_message">Please add at least one player.</string>
    <string name="delete_saved_player_confirmation_message">Do you want to delete the player \"%s\"?</string>
    <string name="delete">Delete</string>
    <string name="first_turn_setup_fragment_title">Which player begins?</string>
    <string name="R.string.owned_cards_setup_error">Please select at least one card</string>
</resources>
