<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/you" />

        <LinearLayout
            android:id="@+id/playerETContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/addPlayer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:drawableLeft="@mipmap/ic_add_black_24dp"
            android:drawableStart="@mipmap/ic_add_black_24dp"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:text="@string/add_player"
            android:textSize="18sp" />

        <Button
            android:id="@+id/doneButton"
            style="?buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next" />
    </LinearLayout>
</ScrollView>